08-jenkins/Jenkins-agent-cd-team-b.yaml
apiVersion: v1
kind: Pod
spec:
  serviceAccountName: jenkins-cd-team-b

  volumes:
    - name: workspace-volume
      emptyDir: {}

  containers:
    - name: jnlp
      image: jenkins/inbound-agent
      args:
        - "$(JENKINS_SECRET)"
        - "$(JENKINS_NAME)"
      volumeMounts:
        - name: workspace-volume
          mountPath: /home/jenkins/agent

    - name: kubectl
      image: bitnami/kubectl:latest
      command: ["cat"]
      tty: true
      volumeMounts:
        - name: workspace-volume
          mountPath: /home/jenkins/agent

    - name: zap
      image: zaproxy/zap-stable:latest
      command: ["cat"]
      tty: true
      volumeMounts:
        - name: workspace-volume
          mountPath: /home/jenkins/agent
